--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
 	<canvas width="1000" height="600" id="myCanvas">
 
 	</canvas>
+
+	<br>
+
+	<img src="Screen Shot 1943-08-06 at 2.png">
+
 	</center>
 	<script src="main.js"></script>
 </body>
